chore: actualizar .gitignore y limpiar archivos temporales
- Excluir check_deps.py (script de desarrollo local)
- Excluir .vscode/ (configuración de IDE local)
- Asegurar que venv/ y .venv/ están en .gitignore
- Eliminar archivos temporales y extraños del repositorio
- Mantener solo código fuente y configuración esencial

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 __pycache__/
 *.pyc
 .env
+
+# Scripts de desarrollo local
+check_deps.py
+
+# IDE configuration
+.vscode/
+
+# Python virtual environment
+venv/
+.venv/
