feat: Implement Section 16 - Delivery Partner with UUID migration
- Add DeliveryPartner model with zipcode-based service areas
- Migrate all IDs from INT to UUID (breaking change)
- Implement BaseService/UserService architecture
- Add automatic shipment assignment based on zipcode and capacity
- Configure separate OAuth2 authentication for partners
- Update test suite for UUID support
- Add Alembic migrations for PostgreSQL

BREAKING CHANGES:
- Database schema requires UUID migration
- PostgreSQL now required (no SQLite fallback)
- API IDs changed from int to UUID format

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,42 @@
+# Development directories (never track)
+_reports/
+_backups/
+_section_integration/
 .venv/
-__pycache__/
-*.pyc
-.env
-
-# Scripts de desarrollo local
-check_deps.py
-
-# IDE configuration
-.vscode/
-
-# Python virtual environment
 venv/
-.venv/
+env/
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Database and logs
+*.sql
+*.log
+*.db
+*.sqlite
+*.sqlite3
+
+# Environment files (except example)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE and OS files
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
+
+# Python
+*.egg-info/
+dist/
+build/
+.coverage
+htmlcov/
+.pytest_cache/
+.mypy_cache/
+
+# Docker
+data/
