feat: Complete Section 17 - Shipment Event & Timeline

--- a/env.example
+++ b/env.example
@@ -29,3 +29,19 @@ POSTGRES_DB=fastapi_db
 # For local development: localhost
 REDIS_HOST=localhost
 REDIS_PORT=6379
+
+# ============================================
+# Mail/Email Settings (Optional - for notifications)
+# ============================================
+# SMTP server configuration for sending emails
+# Leave empty if mail functionality is not needed
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM=noreply@example.com
+MAIL_PORT=587
+MAIL_SERVER=smtp.gmail.com
+MAIL_FROM_NAME=FastShip
+MAIL_STARTTLS=True
+MAIL_SSL_TLS=False
+USE_CREDENTIALS=True
+VALIDATE_CERTS=True
