--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ sqlmodel==0.0.16
 sqlalchemy==2.0.25
 asyncpg==0.29.0
 aiosqlite==0.20.0
-redis==5.0.1
+redis==4.6.0
 python-jose[cryptography]==3.3.0
 PyJWT==2.9.0
 passlib[bcrypt]==1.7.4
@@ -22,3 +22,5 @@ fastapi-mail==1.4.1
 jinja2==3.1.3
 itsdangerous==2.2.0
 twilio==9.3.0
+celery[redis]==5.3.4
+asgiref==3.11.0
