chore: Update docker-compose.yml with Twilio environment variables
- Add TWILIO_SID, TWILIO_AUTH_TOKEN, TWILIO_NUMBER to celery_worker environment
- Ensure both api and celery_worker services have SMS capabilities
- Maintain consistency across development environments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,9 @@ services:
       - MAIL_SSL_TLS=${MAIL_SSL_TLS:-false}
       - USE_CREDENTIALS=${USE_CREDENTIALS:-true}
       - VALIDATE_CERTS=${VALIDATE_CERTS:-true}
+      - TWILIO_SID=${TWILIO_SID:-}
+      - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN:-}
+      - TWILIO_NUMBER=${TWILIO_NUMBER:-}
     depends_on:
       db:
         condition: service_healthy
