--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,11 @@ services:
       - POSTGRES_DB=fastapi_db
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:3000,http://localhost:5173,http://localhost:5174,http://127.0.0.1:3000,http://127.0.0.1:5173,http://127.0.0.1:5174}
+      - EMAIL_MODE=${EMAIL_MODE:-sandbox}
       - MAIL_USERNAME=${MAIL_USERNAME:-}
       - MAIL_PASSWORD=${MAIL_PASSWORD:-}
-      - MAIL_FROM=${MAIL_FROM:-noreply@example.com}
+      - MAIL_FROM=${MAIL_FROM:-noreply@fastship.com}
       - MAIL_PORT=${MAIL_PORT:-587}
       - MAIL_SERVER=${MAIL_SERVER:-smtp.gmail.com}
       - MAIL_FROM_NAME=${MAIL_FROM_NAME:-FastShip}
@@ -25,6 +27,11 @@ services:
       - MAIL_SSL_TLS=${MAIL_SSL_TLS:-false}
       - USE_CREDENTIALS=${USE_CREDENTIALS:-true}
       - VALIDATE_CERTS=${VALIDATE_CERTS:-true}
+      - MAILTRAP_USERNAME=${MAILTRAP_USERNAME:-020d1c8f1885ca}
+      - MAILTRAP_PASSWORD=${MAILTRAP_PASSWORD:-751fa63432b05f}
+      - MAILTRAP_SERVER=${MAILTRAP_SERVER:-sandbox.smtp.mailtrap.io}
+      - MAILTRAP_PORT=${MAILTRAP_PORT:-587}
+      - FRONTEND_URL=${FRONTEND_URL:-http://localhost:5173}
       - TWILIO_SID=${TWILIO_SID:-}
       - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN:-}
       - TWILIO_NUMBER=${TWILIO_NUMBER:-}
@@ -77,9 +84,10 @@ services:
       - REDIS_PORT=6379
       - JWT_SECRET=${JWT_SECRET:-your-secret-key-change-in-production}
       - JWT_ALGORITHM=${JWT_ALGORITHM:-HS256}
+      - EMAIL_MODE=${EMAIL_MODE:-sandbox}
       - MAIL_USERNAME=${MAIL_USERNAME:-}
       - MAIL_PASSWORD=${MAIL_PASSWORD:-}
-      - MAIL_FROM=${MAIL_FROM:-noreply@example.com}
+      - MAIL_FROM=${MAIL_FROM:-noreply@fastship.com}
       - MAIL_PORT=${MAIL_PORT:-587}
       - MAIL_SERVER=${MAIL_SERVER:-smtp.gmail.com}
       - MAIL_FROM_NAME=${MAIL_FROM_NAME:-FastShip}
@@ -87,20 +95,16 @@ services:
       - MAIL_SSL_TLS=${MAIL_SSL_TLS:-false}
       - USE_CREDENTIALS=${USE_CREDENTIALS:-true}
       - VALIDATE_CERTS=${VALIDATE_CERTS:-true}
+      - MAILTRAP_USERNAME=${MAILTRAP_USERNAME:-020d1c8f1885ca}
+      - MAILTRAP_PASSWORD=${MAILTRAP_PASSWORD:-751fa63432b05f}
+      - MAILTRAP_SERVER=${MAILTRAP_SERVER:-sandbox.smtp.mailtrap.io}
+      - MAILTRAP_PORT=${MAILTRAP_PORT:-587}
+      - APP_DOMAIN=${APP_DOMAIN:-localhost:8000}
+      - FRONTEND_URL=${FRONTEND_URL:-http://localhost:5173}
       - TWILIO_SID=${TWILIO_SID:-}
       - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN:-}
       - TWILIO_NUMBER=${TWILIO_NUMBER:-}
       - APP_DOMAIN=${APP_DOMAIN:-localhost:8000}
-      - MAIL_USERNAME=${MAIL_USERNAME:-}
-      - MAIL_PASSWORD=${MAIL_PASSWORD:-}
-      - MAIL_FROM=${MAIL_FROM:-noreply@example.com}
-      - MAIL_PORT=${MAIL_PORT:-587}
-      - MAIL_SERVER=${MAIL_SERVER:-smtp.gmail.com}
-      - MAIL_FROM_NAME=${MAIL_FROM_NAME:-FastShip}
-      - MAIL_STARTTLS=${MAIL_STARTTLS:-true}
-      - MAIL_SSL_TLS=${MAIL_SSL_TLS:-false}
-      - USE_CREDENTIALS=${USE_CREDENTIALS:-true}
-      - VALIDATE_CERTS=${VALIDATE_CERTS:-true}
     depends_on:
       db:
         condition: service_healthy
@@ -108,6 +112,22 @@ services:
         condition: service_started
     volumes:
       - .:/code
+    restart: unless-stopped
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
+    environment:
+      - VITE_API_URL=http://localhost:8000
+      - NODE_ENV=development
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    depends_on:
+      - api
     restart: unless-stopped
 
 volumes:
