--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,39 @@
-fastapi==0.115.6
-uvicorn[standard]==0.30.1
-sqlmodel==0.0.16
-sqlalchemy==2.0.25
+# Core FastAPI dependencies
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+pydantic==2.9.2
+pydantic-settings==2.5.2
+
+# Database
+sqlmodel==0.0.22
 asyncpg==0.29.0
-aiosqlite==0.20.0
-redis==4.6.0
-python-jose[cryptography]==3.3.0
-PyJWT==2.9.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-scalar-fastapi==1.5.0
-email-validator>=2.0.0
-bcrypt==4.2.0  # Versión específica para evitar el error __about__
-pytest==8.3.4
-pytest-asyncio==0.24.0
-httpx==0.27.2
 alembic==1.13.2
+
+# Redis
+redis==5.0.7
+hiredis==2.3.2
+
+# Authentication & Security
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.9
+
+# Email
 fastapi-mail==1.4.1
-jinja2==3.1.3
-itsdangerous==2.2.0
+jinja2==3.1.4
+
+# SMS
 twilio==9.3.0
-celery[redis]==5.3.4
-asgiref==3.11.0
+
+# Celery
+celery==5.4.0
+celery[redis]==5.4.0
+
+# HTTP Client
+httpx==0.27.2
+
+# API Documentation
+scalar-fastapi==0.1.0
+
+# Utilities
+python-dotenv==1.0.1
