--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,41 @@
-# FastAPI Application Environment Variables
-# Copy this file to .env and update with your actual values
+# FastAPI Backend Environment Variables
 
-# ============================================
-# Security Settings
-# ============================================
-# JWT Secret Key - CHANGE THIS IN PRODUCTION!
-# Generate a secure random key: python -c "import secrets; print(secrets.token_urlsafe(32))"
-JWT_SECRET=your-secret-key-change-in-production
-JWT_ALGORITHM=HS256
-
-# ============================================
-# Database Settings (PostgreSQL)
-# ============================================
-# If not provided, the app will fallback to SQLite (dev.db)
-# For Docker Compose, use the service names: db, redis
-POSTGRES_SERVER=localhost
+# Database Configuration
+DATABASE_URL=postgresql://postgres:password@db:5432/fastapi_db
+POSTGRES_SERVER=db
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=fastapi_db
 
-# ============================================
-# Redis Settings
-# ============================================
-# Redis connection URL
-# For Docker Compose: redis://redis:6379
-# For local development: redis://localhost:6379
-REDIS_URL=redis://localhost:6379
+# Redis Configuration
+REDIS_URL=redis://redis:6379
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+# JWT Configuration
+JWT_SECRET=your-secret-key-change-in-production
+JWT_ALGORITHM=HS256
+
+# Application Domain
+APP_DOMAIN=localhost:8000
+
+# CORS Origins (comma-separated)
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:5174,http://127.0.0.1:3000,http://127.0.0.1:5173
+
+# Email Configuration
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM=noreply@example.com
+MAIL_PORT=587
+MAIL_SERVER=smtp.gmail.com
+MAIL_FROM_NAME=FastShip
+MAIL_STARTTLS=true
+MAIL_SSL_TLS=false
+USE_CREDENTIALS=true
+VALIDATE_CERTS=true
+
+# Twilio SMS Configuration
+TWILIO_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_NUMBER=
