--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,25 @@ htmlcov/
 data/
 .cursor/
 .cursorrules
+
+# Frontend (Node.js/React)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Remix
+.remix/
+build/
+.server/
+
+# Frontend build
+frontend/dist/
+frontend/.vite/
+frontend/.env
+frontend/.env.local
+frontend/.env.*.local
+
+# TypeScript
+*.tsbuildinfo
