--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,9 +1,9 @@
-# Production Dockerfile for Frontend
+# Production Dockerfile for Frontend (Render-compatible)
 FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Copy package files
+# Copy package files first for better layer caching
 COPY package*.json .npmrc* ./
 
 # Install dependencies
@@ -13,9 +13,12 @@ RUN npm ci --legacy-peer-deps && \
 # Copy app files
 COPY . .
 
-# Build the application
-ARG VITE_API_URL
+# Build the application with API URL from build arg
+# Render will pass VITE_API_URL as build arg
+ARG VITE_API_URL=https://fastship-api.onrender.com/api/v1
 ENV VITE_API_URL=${VITE_API_URL}
+
+# Build the application
 RUN npm run build
 
 # Production stage with nginx
@@ -27,8 +30,12 @@ COPY --from=builder /app/dist /usr/share/nginx/html
 # Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Expose port 80
+# Expose port 80 (Render uses PORT env var, but nginx listens on 80)
 EXPOSE 80
+
+# Health check for Render
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD wget --quiet --tries=1 --spider http://localhost/health || exit 1
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
