--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,30 @@
 services:
+  # ===== BACKEND API =====
   - type: web
     name: fastship-api
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    env: docker
+    dockerfilePath: ./Dockerfile
+    dockerContext: ./
+    region: oregon
+    plan: free
+    healthCheckPath: /api/v1/health
+    autoDeploy: true
     envVars:
       - key: DATABASE_URL
-        sync: false
+        fromDatabase:
+          name: fastship-db
+          property: connectionString
       - key: REDIS_URL
-        sync: false
+        fromService:
+          name: fastship-redis
+          type: redis
+          property: connectionString
+      - key: CORS_ORIGINS
+        value: https://fastship-frontend.onrender.com
+      - key: FRONTEND_URL
+        value: https://fastship-frontend.onrender.com
+      - key: APP_DOMAIN
+        value: fastship-api.onrender.com
       - key: JWT_SECRET
         generateValue: true
       - key: JWT_ALGORITHM
@@ -22,22 +38,84 @@ services:
       - key: MAIL_FROM
         value: noreply@fastship.com
       - key: MAIL_SERVER
-        value: smtp.gmail.com
+        sync: false
       - key: MAIL_PORT
-        value: 587
+        value: "587"
       - key: MAIL_STARTTLS
-        value: true
+        value: "true"
       - key: MAIL_SSL_TLS
-        value: false
-      - key: CORS_ORIGINS
-        sync: false
-      - key: FRONTEND_URL
-        sync: false
-      - key: APP_DOMAIN
-        sync: false
+        value: "false"
       - key: TWILIO_SID
         sync: false
       - key: TWILIO_AUTH_TOKEN
         sync: false
       - key: TWILIO_NUMBER
         sync: false
+
+  # ===== FRONTEND =====
+  - type: web
+    name: fastship-frontend
+    env: docker
+    dockerfilePath: ./frontend/Dockerfile.prod  # Your existing Dockerfile.prod
+    dockerContext: ./frontend
+    region: oregon  # Same region as backend
+    plan: free
+    healthCheckPath: /  # Root path health check
+    autoDeploy: true
+    envVars:
+      - key: VITE_API_URL
+        value: https://fastship-api.onrender.com/api/v1
+      - key: NODE_ENV
+        value: production
+    routes:  # Important for SPA routing
+      - type: rewrite
+        source: /*
+        destination: /index.html
+
+  # ===== CELERY WORKER =====
+  - type: worker
+    name: fastship-worker
+    env: docker
+    dockerfilePath: ./Dockerfile
+    dockerContext: ./
+    region: oregon
+    plan: free
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: fastship-db
+          property: connectionString
+      - key: REDIS_URL
+        fromService:
+          name: fastship-redis
+          property: connectionString
+      - key: JWT_SECRET
+        sync: false
+      - key: JWT_ALGORITHM
+        value: HS256
+      - key: EMAIL_MODE
+        value: production
+      - key: MAIL_USERNAME
+        sync: false
+      - key: MAIL_PASSWORD
+        sync: false
+      - key: MAIL_FROM
+        value: noreply@fastship.com
+      - key: MAIL_SERVER
+        sync: false
+      - key: MAIL_PORT
+        value: "587"
+      - key: APP_DOMAIN
+        value: fastship-api.onrender.com
+    command: celery -A app.celery_app worker --loglevel=info
+
+databases:
+  - name: fastship-db
+    databaseName: fastship_db
+    plan: free
+    ipAllowList: []
+
+redis:
+  - name: fastship-redis
+    plan: free
+    ipAllowList: []
