chore: Set EMAIL_MODE to sandbox for initial deployment
- Change EMAIL_MODE from production to sandbox
- Use Mailtrap for email testing during initial deployment
- Can be changed to production later when ready for live emails

--- a/render.yaml
+++ b/render.yaml
@@ -30,7 +30,7 @@ services:
       - key: JWT_ALGORITHM
         value: HS256
       - key: EMAIL_MODE
-        value: production
+        value: sandbox
       - key: MAIL_USERNAME
         sync: false
       - key: MAIL_PASSWORD
