--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,6 +20,6 @@
       "~/*": ["./app/*"]
     }
   },
-  "include": ["app"],
+  "include": ["app", "env.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
