--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ hiredis==2.3.2
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.9
+itsdangerous==2.1.2
 
 # Email
 fastapi-mail==1.4.1
